RESOLVED FIXED209906
ServiceWorkerFetchTask::timeoutTimerFired should not call contextClosed
https://bugs.webkit.org/show_bug.cgi?id=209906
Summary ServiceWorkerFetchTask::timeoutTimerFired should not call contextClosed
youenn fablet
Reported 2020-04-02 08:39:21 PDT
contextClosed should only be called from the context connection destructor.
Attachments
Patch (1.97 KB, patch)
2020-04-02 08:43 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-04-02 08:39:51 PDT
youenn fablet
Comment 2 2020-04-02 08:43:35 PDT
Ryan Haddad
Comment 3 2020-04-02 16:03:06 PDT
EWS is green. Is this good for review?
EWS
Comment 4 2020-04-03 08:21:32 PDT
Committed r259460: <https://trac.webkit.org/changeset/259460> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395269 [details].
Alexey Proskuryakov
Comment 5 2020-04-04 13:08:37 PDT
*** Bug 209905 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.