ServiceWorkerFetchTask::timeoutTimerFired should not call contextClosed https://bugs.webkit.org/show_bug.cgi?id=209906 <rdar://problem/61207801>

Reviewed by Chris Dumez.

Covered by http/tests/workers/service/basic-timeout.https.html no longer crashing.

* NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.cpp:
(WebKit::ServiceWorkerFetchTask::timeoutTimerFired):
We should not call contextClosed now that we are nullying m_swServerConnection in contextClosed.
Instead, we should just call cannotHandle since the timer can only fire if we have not yet received any response.


Canonical link: https://commits.webkit.org/222881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259460 268f45cc-cd09-0410-ab3c-d52691b4dbfc